--- a/style/style_index.css
+++ b/style/style_index.css
@@ -1,12 +1,73 @@
-.header {
-    height: 149px;
-    width: 100%;
-    background-color: #222831;
-    display: flex;
-    justify-content: space-between;
-}
+input{font-size: 16px;
+	text-transform: uppercase;
+	line-height:20px;
+	margin-bottom: 8px;
+	padding: 15px 20px}
 
-.bandeau_noir{
-    width: 100%;
-    height: 171px;
-}
+body{background-image: url('../images/background1.jpg');
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;}
+
+*{box-sizing: border-box;}
+
+/* HEADER */
+
+header {background-color: #222831;
+    display: flex;
+    gap: 35px;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 10px 5vw;}
+
+    .logo {margin-left: 50px;}
+    .logo img{width: 140px;}
+
+    .header1{display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;}
+
+    .connexion-inscrip{display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    gap: 2vw}
+
+        .connexion{font-size: 14px;
+            line-height:18px;
+            text-decoration: none;
+            color: #FFFFFF;
+            padding: 10px 30px;
+            border:0.5px solid white;
+            border-radius: 20px}
+
+        .inscription{background-color: #C1A57B;
+            font-size: 14px;
+            line-height:18px;
+            text-decoration: none;
+            color: black;
+            padding: 10px 30px;
+            border-radius: 20px}
+
+        .menu-burger {cursor: pointer;
+            display: flex; /* Utilisez flex pour aligner les barres du burger */
+            flex-direction: column; /* Empile les barres verticalement */
+            justify-content: space-around; /* Espacement entre les barres */
+            padding: 10px; /* Espacement autour du menu burger */
+            height: 40px; /* Hauteur totale du menu burger */}
+
+            .menu-burger span {display: block;
+                        width: 30px; /* Largeur des barres du menu burger */
+                        height: 3px; /* Hauteur des barres du menu burger */
+                        background-color: white;
+                        border-radius: 2px;}
+
+/* Responsive HEADER */
+@media (max-width: 1000px){
+    .header-nav, .nav-group{display: none;}
+    header{justify-content: space-between;
+            gap: 10vw;}
+    .logo{margin-left: 2vw;}
+    .logo img{width: 50vw;}
+    .menu-burger span{width: 30px; padding: 1px;}}
