--- a/style/font.css
+++ b/style/font.css
@@ -1,7 +1,7 @@
 /*CSS FONT*/
 
 
-body{font-family: Arial, Helvetica, sans-serif;}
+body{font-family: Helvetica, sans-serif;}
 
 h1{font-size: 72px;
 	text-transform: uppercase;
@@ -34,7 +34,7 @@ p{font-size: 16px;
 
 	/* Responsive FONT*/
 
-	@media (max-width: 955px) {
+	/* @media (max-width: 955px) {
 		h1{font-size: 10vw;
 			line-height:12vw;
 			margin-bottom: 2vw;}
@@ -49,7 +49,7 @@ p{font-size: 16px;
 		
 		p{font-size: 2.5vw;
 			line-height:3.5vw;
-			margin-bottom: 2vw;}}
+			margin-bottom: 2vw;}} */
 
 
 
