--- a/style/style_index.css
+++ b/style/style_index.css
@@ -1,5 +1,4 @@
 input{font-size: 16px;
-	text-transform: uppercase;
 	line-height:20px;
 	margin-bottom: 8px;
 	padding: 15px 20px}
@@ -10,6 +9,9 @@ body{background-image: url('../images/background1.jpg');
 	background-size: cover;}
 
 *{box-sizing: border-box;}
+
+li{list-style-type: none;}
+
 
 /* HEADER */
 
@@ -50,6 +52,8 @@ header {background-color: #222831;
             padding: 10px 30px;
             border-radius: 20px}
 
+        .login-icon{display : none}
+
         .menu-burger {cursor: pointer;
             display: flex; /* Utilisez flex pour aligner les barres du burger */
             flex-direction: column; /* Empile les barres verticalement */
@@ -65,9 +69,122 @@ header {background-color: #222831;
 
 /* Responsive HEADER */
 @media (max-width: 1000px){
-    .header-nav, .nav-group{display: none;}
-    header{justify-content: space-between;
+    .header1{justify-content: space-between;
             gap: 10vw;}
+
+    .menu-burger span{width: 30px; padding: 1px;}
     .logo{margin-left: 2vw;}
-    .logo img{width: 50vw;}
-    .menu-burger span{width: 30px; padding: 1px;}}
+      .logo img{width: 30vw;}
+    
+    .connexion-inscrip{display: none;}
+    .login-icon{display: inline;
+                width: 7vw}}
+
+
+
+
+/* TITRE CALCULATRICE */
+
+.titreCalcl{background-color: #121212;
+            padding : 50px 5vw}
+
+    .boutonCalculatrices{font-size: 14px;
+        line-height:18px;
+        text-decoration: none;
+        color: #FFFFFF;
+        font-size: 20px;
+        font-weight: bold;
+        padding: 10px 30px;
+        border:0.5px solid #C1A57B;
+        border-radius: 20px}
+
+
+
+/* BARRE RECHERCHE */
+
+.search-bar{padding: 30px 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;}
+
+    input[type=search]{background: rgba(255, 255, 255, 0.212);
+                    color : darkgray;
+                    text-align: left;
+                    border: 0.5px solid rgba(255, 255, 255, 0.212);
+                    border-radius: 20px;
+                    width: 90vw;}
+
+
+
+/* CALCULATORS CARDS */
+
+.section_cards{display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: space-between;
+            align-items: center;
+            align-content: center;
+            padding: 45px 20vw;}
+
+.section_cards h3{text-transform: none;}
+
+    .center_cards {
+        display: flex;
+        align-items: center;
+        padding : 20px 0
+      }
+    
+          .calculator_cards {
+            width: 15vw;
+            height: 15vw;
+            border-radius: 12px;
+            overflow: hidden;
+            position: relative;
+            font-family: Arial, Helvetica, sans-serif;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            transition: all 300ms;
+          }
+
+              .calculator_cards:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+              }
+
+              .calculator_cards img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+              }
+
+              .calculator_cards .content {
+                box-sizing: border-box;
+                width: 100%;
+                position: absolute;
+                padding: 30px 20px 20px 20px;
+                height: auto;
+                bottom: 0;
+                background: linear-gradient(transparent, rgba(0, 0, 0, 0.6));
+              }
+
+              .calculator_cards .title {
+                margin: 0;
+              }
+
+              .calculator_cards .title {
+                font-size: 17px;
+                color: black;
+              }
+
+/* Responsive CALCULATRICES */
+@media (max-width: 1000px) {
+  .section_cards{flex-direction: column;
+                  gap: 20px;
+                  padding: 0 8vw}
+    .calculator_cards{width: 80vw;
+                      height: 30vw;}}
+
+                                                                                
+
+
