:art: update : add sidebar

--- a/style/font.css
+++ b/style/font.css
@@ -1,7 +1,7 @@
 /*CSS FONT*/
 
 
-body{font-family: Helvetica, sans-serif;}
+body{font-family: "Inter", sans-serif;}
 
 h1{font-size: 72px;
 	text-transform: uppercase;
