--- a/style/style_liste_calculatrices.css
+++ b/style/style_liste_calculatrices.css
@@ -33,7 +33,9 @@ header {background-color: #222831;
                               
         .sidebar{position: fixed;
                 top:0;
+                bottom: 0;
                 left: 0;
+                overflow-y: scroll;
                 height: 100vh;
                 width: 350px;
                 z-index: 999;
@@ -45,7 +47,9 @@ header {background-color: #222831;
                 align-items: flex-start;
                 justify-content: flex-start;
                 gap: 30px;
-                padding: 40px;}
+                padding: 2vh 40px 0 40px;}
+
+            .sidebar::-webkit-scrollbar{display: none;}
 
             .sidebar li{width: 100%;border-radius: 8px; height:40px; transition: all 0.3s;}
             .sidebar li:hover {background-color: rgba(255, 255, 255, 0.2);}
