--- a/style/test.css
+++ b/style/test.css
@@ -405,5 +405,14 @@ footer ul li {
   color: red;
 }
 
+#calcForm p{
+  font-weight: bolder;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  border: 2px solid black;
+  border-radius: 26px;
+}
+
 
 
