--- a/style/style_liste_calculatrices.css
+++ b/style/style_liste_calculatrices.css
@@ -218,6 +218,7 @@ header {background-color: #222831;
                   padding: 0 8vw}
     .calculator_cards{width: 80vw;
                       height: 30vw;}}
+    .cards_section h3{font-size: 18px; line-height: 20px;}
 
                                                                                 
 
